...
                    app:layout_constraintEnd_toStartOf="@id/urlInfo"
                    app:layout_constraintStart_toEndOf="@id/serverIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <org.simprints.dhis2.utils.customviews.TextInputAutoCompleteTextView
                        android:id="@+id/server_url_edit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:imeOptions="actionNext"
                        android:inputType="textUri"
                        android:onTextChanged="@{loginModel::onServerChanged}"
                        android:padding="5dp"
...
                    app:layout_constraintEnd_toStartOf="@id/clearUserNameButton"
                    app:layout_constraintStart_toEndOf="@id/userIcon"
                    app:layout_constraintTop_toBottomOf="@+id/server_url"
                    app:layout_constraintVertical_chainStyle="spread">

                    <org.simprints.dhis2.utils.customviews.TextInputAutoCompleteTextView
                        android:id="@+id/user_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:onTextChanged="@{loginModel::onUserChanged}"
                        android:textColor="@color/text_black_333"
...
                    app:layout_constraintEnd_toStartOf="@id/clearPassButton"
                    app:layout_constraintStart_toEndOf="@id/passIcon"
                    app:layout_constraintTop_toBottomOf="@+id/user_name"
                    app:layout_constraintVertical_chainStyle="spread">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_pass_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:onTextChanged="@{loginModel::onPassChanged}"
                        android:textColor="@color/text_black_333"
...
                    android:indeterminate="true"
                    app:progressColor="@{@color/colorPrimary}" />
            </LinearLayout>
            <!--style="@style/FullWidthButton"-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{()-> presenter.onButtonClick()}"
                android:text="@string/log_in_button"
...
